<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailedDisplay"
    tools:showIn="@layout/activity_detailed_display">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_car_dark"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelPrice"
        app:layout_constraintTop_toBottomOf="@+id/labelPrice" />


    <TextView
        android:id="@+id/labelColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/colour"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="@+id/labelPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

    <TextView
        android:id="@+id/textViewColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="colour"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelColour"
        app:layout_constraintTop_toBottomOf="@+id/labelColour" />

    <TextView
        android:id="@+id/labelTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/transmission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewColour" />

    <TextView
        android:id="@+id/textViewTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="transmission"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelTransmission"
        app:layout_constraintTop_toBottomOf="@+id/labelTransmission" />

    <TextView
        android:id="@+id/labelMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/mileage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTransmission" />

    <TextView
        android:id="@+id/textViewMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mileage"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelMileage"
        app:layout_constraintTop_toBottomOf="@+id/labelMileage" />

    <TextView
        android:id="@+id/labelFuel_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/fuel_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMileage" />

    <TextView
        android:id="@+id/textViewFuel_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fuel_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelFuel_type"
        app:layout_constraintTop_toBottomOf="@+id/labelFuel_type" />

    <TextView
        android:id="@+id/labelEngine_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/engine_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuel_type" />

    <TextView
        android:id="@+id/textViewEngine_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="engine_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelEngine_size"
        app:layout_constraintTop_toBottomOf="@+id/labelEngine_size" />

    <TextView
        android:id="@+id/labelNumber_doors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/number_doors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEngine_size" />

    <TextView
        android:id="@+id/textViewNumber_doors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="number_doors"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelNumber_doors"
        app:layout_constraintTop_toBottomOf="@+id/labelNumber_doors" />

    <TextView
        android:id="@+id/labelCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumber_doors" />

    <TextView
        android:id="@+id/textViewCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="condition"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelCondition"
        app:layout_constraintTop_toBottomOf="@+id/labelCondition" />

    <TextView
        android:id="@+id/labelNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCondition" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="notes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/labelNotes"
        app:layout_constraintTop_toBottomOf="@+id/labelNotes" />

    <TextView
        android:id="@+id/textViewLicense_number"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="LL0 LLL"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        android:typeface="monospace"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewVehicleDescription"
        android:layout_width="237dp"
        android:layout_height="29dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="sans-serif-black"
        android:text="Make Model (Year)"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>
